# family-app

./: .gitignore  CLAUDE.md  pnpm-lock.yaml  render.yml
.claude/skills/fastapi-module/: SKILL.md
.claude/skills/react-feature/: SKILL.md
.github/: dependabot.yml
.github/workflows/: backend-ci.yml  ci.yml  frontend-ci.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026-04-30_add_email_to_member.py  2026-04-30_add_member_table.py  2026-05-01_add_password_hash_to_member.py
backend/scripts/: seed_family.py
backend/src/: config.py  database.py  exceptions.py  main.py  models.py  pagination.py
backend/src/auth/: config.py  constants.py  dependencies.py  exceptions.py  router.py  schemas.py  service.py  utils.py
backend/src/members/: constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend/tests/: conftest.py
backend/tests/auth/: conftest.py  test_router.py  test_service.py
backend/tests/members/: conftest.py  test_router.py  test_service.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/components/: ProtectedRoute.tsx
frontend/src/features/members/: api.ts  hooks.ts  index.ts  routes.tsx  schemas.ts
frontend/src/features/members/components/: MemberCard.tsx  MemberForm.tsx
frontend/src/hooks/: useMe.ts
frontend/src/lib/: api-types.ts  api.ts  apiError.ts  queryClient.ts
frontend/src/pages/: HomePage.tsx  LoginPage.tsx
